--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ ul {
   list-style: none;
 }
 
+:hover,
+:focus {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -71,10 +76,6 @@ nav .logo span {
 
 .nav-list {
   display: flex;
-}
-
-.nav-list > .item {
-  position: relative;
 }
 
 .nav-list > .item:not(:last-child) {
@@ -126,6 +127,10 @@ nav .logo span {
   color: var(--accent-color);
 }
 
+.nav-link {
+  position: relative;
+}
+
 .nav-link.current::after {
   content: "";
   position: absolute;
@@ -138,6 +143,7 @@ nav .logo span {
 }
 
 /* Studio main */
+/* Hero-section */
 .hero-section {
   max-width: 1600px;
   margin: 0 auto;
@@ -164,17 +170,68 @@ nav .logo span {
   text-transform: uppercase;
 }
 
-.hero-buttom {
+.hero-button {
   display: inline-block;
   padding: 10px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: 0;
   background-color: var(--accent-color);
   color: #ffffff;
+  text-align: center;
+  font-family: Roboto, sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 700ms ease;
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal {
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: scale(1) translate(-50%, -50%);
+  transition: transform 1000ms ease-in;
+  min-width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.7) translate(-70%, -70%);
+}
+
+.modal-close-button {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 /* Section-2 */
@@ -536,6 +593,32 @@ nav .logo span {
   margin-bottom: 0px;
 }
 
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.items-link:hover .hidden-text,
+.items-link:focus .hidden-text {
+  opacity: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hidden-text {
+  opacity: 0;
+  position: absolute;
+  padding: 63px 24px;
+  color: #ffffff;
+  background: rgba(33, 150, 243, 0.9);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+}
+
 .items-content {
   padding: 20px 24px;
   background: var(--primary-bg-color);
@@ -543,7 +626,7 @@ nav .logo span {
   border-top: none;
 }
 
-.items-list h2 {
+.items-content h2 {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -551,7 +634,7 @@ nav .logo span {
   letter-spacing: 0.06em;
 }
 
-.items-list p {
+.items-content p {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
