--- a/css/styles.css
+++ b/css/styles.css
@@ -583,22 +583,22 @@ nav .logo span {
   width: calc((100%-60px) / 3);
 }
 
-.items-list li:hover,
-.ites-list li:focus {
+.items-list > li:hover,
+.items-list > li:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.items-list li {
+.items-list > li {
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.items-list li:nth-child(3n) {
+.items-list > li:nth-child(3n) {
   margin-right: 0px;
 }
 
-.items-list li:nth-last-child(-n + 3) {
+.items-list > li:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 
